src/DDD/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ddd-sales-api
  namespace: default
  labels:
    app: ddd-sales-api
    tier: backend
    architecture: ddd
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: ddd-sales-api
  sessionAffinity: None
